# wordpress-plugin

./: .env.ci  .env.template  .gitignore  .pre-commit-config.yaml  README.md  build-zip.sh  composer.json  dev.py  docker-compose.override.yml.example  docker-compose.yml  empire.php  organic.php  phpcs.xml  phpunit.xml  pyproject.toml  readme.txt  run.py
.github/: dependabot.yml  release-drafter.yml
Empire/: AdConfigSyncCommand.php  AdminSettings.php  AdsConfig.php  AdsInjector.php  AdsTxt.php  AdsTxtSyncCommand.php  AmpAdsInjector.php  AmpConfig.php  Api.php  BaseConfig.php  CCPAPage.php  Campaign.php  CampaignAsset.php  Campaigns.php  ContentIdMapSyncCommand.php  ContentSyncCommand.php  Empire.php  Environment.php  GraphQL.php  LogLevel.php  PageInjection.php  PostEditor.php  PrefillAdsInjector.php  PrefillConfig.php  helpers.php  public.php
Organic/: AdConfigSyncCommand.php  AdminNotice.php  AdminSettings.php  AdsConfig.php  AdsInjector.php  AdsTxt.php  AdsTxtSyncCommand.php  Affiliate.php  AffiliateConfigSyncCommand.php  AmpAdsInjector.php  AmpAffiliateInjector.php  AmpConfig.php  Api.php  BaseConfig.php  CCPAPage.php  CampaignAsset.php  ConnatixConfig.php  ContentIdMapSyncCommand.php  ContentSyncCommand.php  Environment.php  FbiaAdsInjector.php  FbiaConfig.php  FbiaProxy.php  GraphQL.php  LogLevel.php  MetadataCollector.php  Organic.php  PageInjection.php  PrefillAdsInjector.php  PrefillConfig.php  SlotsInjector.php  helpers.php  public.php  types.php
affiliate/: config.js  initSDKOnPostLoad.js  onPostLoadScripts.js  package-lock.json  package.json  (+1 more)
(+127 files in other folders)
