[tool.poetry]
name = "organic-wp-plugin"
version = "0.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
click = "^8.1.3"
pyyaml = "^6.0"
ipython = "^8.11.0"
pudb = "^2022.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
